# cs222-winter24-suhas-bn-1412

./: .gitignore  README.md
.github/workflows/: cmake-single-platform.yml
report/: project1.md  project2.md  project3.md  project4.md  valgrind.md
src/: CMakeLists.txt
src/cli/: cli.cc
src/include/: ValueDeserializer.h  ValueSerializer.h  attributeAndValue.h  attributeAndValueSerializer.h  attributesAttributeConstants.h  catalogueConstants.h  catalogueConstantsBuilder.h  ix.h  leafPage.h  nonLeafPage.h  page.h  pageDeserializer.h  pageSelector.h  pageSerDesConstants.h  pageSerializer.h  pfm.h  qe.h  rbfm.h  record.h  recordTransformer.h  rm.h  slot.h  tablesAttributeConstants.h  util.h  varcharSerDes.h
src/ix/: CMakeLists.txt  ix.cc  leafPage.cc  nonLeafPage.cc  pageDeserializer.cc  pageSerDesConstants.cc  pageSerializer.cc
src/pfm/: CMakeLists.txt  pfm.cc
src/qe/: CMakeLists.txt  ValueDeserializer.cc  ValueSerializer.cc  qe.cc
src/rbfm/: CMakeLists.txt  page.cc  pageSelector.cc  rbfm.cc  record.cc  recordTransformer.cc  slot.cc
src/rm/: CMakeLists.txt  attributeAndValue.cc  attributeAndValueSerializer.cc  attributesAttributeConstants.cc  catalogueConstants.cc  catalogueConstantsBuilder.cc  rm.cc  tablesAttributeConstants.cc  varcharSerDes.cc
src/util/: CMakeLists.txt  util.cc
test/ix/: ixtest_public.cc
test/qe/: qetest_public.cc
test/rbfm/: rbfmtest_public.cc
test/rm/: rmtest_public.cc
test/utils/: rm_test_util.h
